--- a/Listie.xcodeproj/xcshareddata/xcschemes/Listie.xcscheme
+++ b/Listie.xcodeproj/xcshareddata/xcschemes/Listie.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FE402EBB2B0488480090EEC0"
+               BuildableName = "ListieUITests.xctest"
+               BlueprintName = "ListieUITests"
+               ReferencedContainer = "container:Listie.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
